--- a/index.html
+++ b/index.html
@@ -8,35 +8,35 @@
 </head>
 <body>
     <div id="calculator">
-        <div id="display">0</div>
+        <div id="display"></div>
         <div id="row1">
-            <button id="b1">AC</button>
-            <button id="b2">+/-</button>
-            <button id="b3">%</button>
-            <button id="b4">÷</button>
+            <button class="clear" id="clear">AC</button>
+            <button id="invert">+/-</button>
+            <button class="%" id="percentage">%</button>
+            <button class="operators" id="divide">÷</button>
         </div>
         <div id="row2">
-            <button id="b5">1</button>
-            <button id="b6">2</button>
-            <button id="b7">3</button>
-            <button id="b8">x</button>
+            <button class="numbers" id="one">1</button>
+            <button class="numbers" id="two">2</button>
+            <button class="numbers" id="three">3</button>
+            <button class="operators" id="multiply">x</button>
         </div>
         <div id="row3">
-            <button id="b9">4</button>
-            <button id="b10">5</button>
-            <button id="b11">6</button>
-            <button id="b12">-</button>
+            <button class="numbers" id="four">4</button>
+            <button class="numbers" id="five">5</button>
+            <button class="numbers" id="six">6</button>
+            <button class="operators" id="subtraction">-</button>
         </div>
         <div id="row4">
-            <button id="b13">7</button>
-            <button id="b14">8</button>
-            <button id="b15">9</button>
-            <button id="b16">+</button>
+            <button class="numbers" id="seven">7</button>
+            <button class="numbers" id="eight">8</button>
+            <button class="comma" id="nine">9</button>
+            <button class="operators" id="add">+</button>
         </div>
         <div id="row5">
-            <button id="b17">0</button>
-            <button id="b18">,</button>
-            <button id="b19">=</button>
+            <button class="numbers" id="zero">0</button>
+            <button id=",">,</button>
+            <button id="equal">=</button>
         </div>
     </div>    
 </body>
