Add specific functions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="row1">
             <button class="clear" id="clear">AC</button>
             <button id="invert">+/-</button>
-            <button class="%" id="percentage">%</button>
+            <button id="percentage">%</button>
             <button class="operators" id="divide">÷</button>
         </div>
         <div id="row2">
@@ -30,12 +30,12 @@
         <div id="row4">
             <button class="numbers" id="seven">7</button>
             <button class="numbers" id="eight">8</button>
-            <button class="comma" id="nine">9</button>
+            <button class="numbers" id="nine">9</button>
             <button class="operators" id="add">+</button>
         </div>
         <div id="row5">
             <button class="numbers" id="zero">0</button>
-            <button id=",">,</button>
+            <button id="dot">.</button>
             <button id="equal">=</button>
         </div>
     </div>    
